# gerrit-cmd

./: .gitignore  README.md  README.rst  README.rst.bak  grtrc_exaple  requirements.txt  setup.cfg  setup.py  test-requirements.txt  test.py  tox.ini
gerrit-cmd/: test_rest.py
gerrit-cmd/client/: shell.py
gerrit-cmd/client/actions/changes/: change.py
gerrit-cmd/rest/: changesrest.py  restbase.py
gerrit_cmd/: .test_rest.py.swp  file  test_rest.py
gerrit_cmd/client/actions/changes/: change.py
gerrit_cmd/client/actions/config/: localconfig.py
gerrit_cmd/client/actions/projects/: project.py
gerrit_cmd/client/shell/: shell.py  shellbase.py
gerrit_cmd/rest/: restbase.py
test/: test.sh
