[metadata]
name = gerrit_cmd
summary = a terminal client for gerrit
description-file = README.rst
author = Xiang Chen
author-email = xionchen@foxmail.com
maintainer = Xiang Chen
maintainer-email = xionchen@foxmail.com
home-page = https://github.com/pyKun/scalpels
license = apache v2.0
classifier =
    Topic :: Utilities
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Environment :: Console
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages = scalpels

[entry_points]
console_scripts =
    sca = scalpels.client.shell:main
    sca-manage = scalpels.cmd.manage:main
    sca-agent = scalpels.cmd.agent:main
    sca-tracer = scalpels.cmd.tracer:main
