[metadata]
name = gerrit_cmd
summary = a terminal client for gerrit
description-file = README.rst
author = Xiang Chen
author-email = xionchen@foxmail.com
maintainer = Xiang Chen
maintainer-email = xionchen@foxmail.com
home-page = https://github.com/xionchen/gerrit-cmd
license = MIT License
classifier =
    Topic :: Utilities
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Environment :: Console
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages = gerrit_cmd

[entry_points]
console_scripts =
    gerrit_cmd = gerrit_cmd.client.shell.shell:main
